@@ -1,8 +1,10 @@
-2009-08-10  Michael Lamothe <michael.lamothe@gmail.com>
+2010-01-01  Michael Lamothe <michael.lamothe@gmail.com>
 
 	* 1.1.0
 	* Updated intltool
 	* Applied Martin Pitt's patch for duplicate ids
+	* Updated include order in channels.h to allow compile in recent kernel
+	* Ignoring scheduled recording check for same scheduled recording (LP: #437142)
 
 2009-08-10  Michael Lamothe <michael.lamothe@gmail.com>
 
